# sentinel-ai-guardrail

./: .env.example  .gitignore  .pre-commit-config.yaml  TESTING.md  pyproject.toml  run_tests.sh
.github/workflows/: deploy.yml  lint-backend.yml  lint-frontend.yml  test-unit.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/src/sentinel/: config.py
backend/src/sentinel/domain/: exceptions.py
backend/src/sentinel/domain/engines/: confidence_scoring.py  decision_engine.py  fallback_strategy.py
backend/src/sentinel/domain/engines/prompt_validation/: __init__.py  injection_detector.py  pii_detector.py  policy_filter.py  prompt_validation_engine.py  risk_scorer.py
backend/src/sentinel/domain/models/: __init__.py  claim.py  confidence.py  decision.py  evidence.py  pipeline_context.py  policy.py
backend/src/sentinel/infrastructure/chunking/: __init__.py  text_chunker.py
backend/src/sentinel/infrastructure/db/: engine.py  models.py
backend/src/sentinel/infrastructure/db/repositories/: analytics_repo.py  base.py  kb_repo.py  policy_repo.py  request_repo.py  session_repo.py
backend/src/sentinel/infrastructure/embeddings/: __init__.py  base.py  sentence_transformer.py
backend/src/sentinel/infrastructure/llm/: __init__.py  base.py  ollama_adapter.py  openai_adapter.py
backend/src/sentinel/infrastructure/safety/: __init__.py  detoxify_classifier.py
backend/src/sentinel/infrastructure/storage/: __init__.py  local_file_storage.py
backend/src/sentinel/infrastructure/vector_store/: __init__.py  base.py  faiss_store.py
backend/tests/integration/: conftest.py
backend/tests/integration/db/: test_analytics_repo.py  test_kb_repo.py  test_orm_models.py  test_policy_repo.py  test_request_repo.py  test_session_repo.py
backend/tests/integration/infrastructure/: test_detoxify_classifier.py  test_embedding_adapter.py  test_faiss_store.py  test_local_file_storage.py  test_ollama_adapter.py  test_openai_adapter.py
backend/tests/migration/: conftest.py  test_0001_initial_schema.py  test_0001_schema.py  test_constraints.py  test_env.py  test_indexes.py
backend/tests/unit/domain/: conftest.py  test_confidence_scoring.py  test_decision_engine.py  test_fallback_strategy.py  test_injection_detector.py  test_models.py  test_pii_detector.py  test_policy_filter.py  test_prompt_validation_engine.py  test_risk_scorer.py
backend/tests/unit/infrastructure/: test_text_chunker.py
docker/: .dockerignore  Caddyfile  Dockerfile.backend  docker-compose.dev.yml  docker-compose.yml
docker/scripts/: preload_models.py
docs/: 00_PRODUCT_SPECIFICATION.md  01_SYSTEM_ARCHITECTURE.md  02_TECH_DECISIONS.md  03_DATABASE_SCHEMA.md  04_DOMAIN_ENGINE_DESIGN.md  05_APPLICATION_STRUCTURE.md  06_AUTOMATION_AND_AI_INTEGRATION.md  07_SECURITY_MODEL.md  08_BACKUP_AND_RECOVERY.md  09_TESTING_STRATEGY.md  10_DEPLOYMENT_WORKFLOW.md  11_EXECUTION_PLAN.md  12_ENGINEERING_EXECUTION_PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: client.ts  websocket.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: analyticsSlice.ts  kbSlice.ts  playgroundSlice.ts  policySlice.ts  requestsSlice.ts
